Feat: Adicionando validação e mensagens de erro para redefinição de senha
